--- a/_posts/2018-10-27- [POI2018]Powódź.md
+++ b/_posts/2018-10-27- [POI2018]Powódź.md
@@ -3,6 +3,7 @@ layout:         post
 title:          "[POI2018]Powódź"
 date:           2018-10-27
 author:         "Dispwnl"
+header-img:     "/img/used/4787.jpg"
 catalog:    true
 tags:
     - 组合数学
