--- a/_posts/2018-10-28-[NOI.AC43]ladder.md
+++ b/_posts/2018-10-28-[NOI.AC43]ladder.md
@@ -3,6 +3,7 @@ layout:     post
 title:      "[NOI.AC43]ladder"
 date:       2018-10-28
 author:     "Dispwnl"
+header-img:	"/img/used/4532.jpg"
 catalog:  true
 tags:
     - 动态规划
