--- a/_posts/2018-10-30-[BZOJ5091][Lydsy1711月赛]摘苹果.md
+++ b/_posts/2018-10-30-[BZOJ5091][Lydsy1711月赛]摘苹果.md
@@ -3,7 +3,7 @@ layout:     post
 title:      "[BZOJ5091][Lydsy1711月赛]摘苹果"
 date:       2018-10-30
 author:     "Dispwnl"
-header-img: "/img/used/999.jpg"
+header-img: "img/used/999.jpg"
 catalog:  true
 tags:
     - 动态规划
