--- a/_posts/2018-10-24-LOJ刷题记录.md
+++ b/_posts/2018-10-24-LOJ刷题记录.md
@@ -3,7 +3,7 @@ layout:         post
 title:          "LOJ刷题记录"
 date:           2018-10-24
 author:         "Dispwnl"
-hearer-img:		"img/used/4785.jpg"
+header-img:		"img/used/4785.jpg"
 catalog:        true
 tags:
     - 动态规划
