Update and rename 2018-03-14-平衡树模板+Fhq_Treap详解.md to 2018-03-14-平衡树模板+Fhq_Treap略解.md

--- a/_posts/2018-03-14-平衡树模板+Fhq_Treap略解.md
+++ b/_posts/2018-03-14-平衡树模板+Fhq_Treap略解.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      "平衡树模板+Fhq_Treap详解"
+title:      "平衡树模板+Fhq_Treap略解"
 date:       2018-03-14
 author:     "Dispwnl"
 header-img: "img/used/4.jpg"
@@ -8,11 +8,11 @@ catalog: true
 tags:
     - 平衡树
 ---
-这里提供了$Splay$,$Treap$,$Fhq$ $Treap$的模板数组写法
+这里提供了$Splay,Treap,Fhq Treap$的模板数组写法
 
-$Splay$ $Treap$的题解到处都是，这里讲一下$Fhq$ $Treap$~~错了别找我~~
+粗略描述一下$Fhq Treap$
 
-$Fhq$ $Treap$就是非旋$Treap$
+$Fhq Treap$就是非旋$Treap$
 
 通过merge split两个函数实现平衡树的操作
 
@@ -115,7 +115,7 @@ void ins(int x)
 
 先把树按照权值$split$成$a,b$，再把$a$按照权值-1 $split$成$c,d$
 
-再$merge(son[d][0],son[d][1])$，最后$merge(merge(c,d),b)$
+再$merge(son_{d,0},son_{d,1})$，最后$merge(merge(c,d),b)$
 
 这里变量有重复使用~~凑合看吧~~
 ```
@@ -147,7 +147,7 @@ int rank(int x)
 ```
 - ###  mink(int x,int i)
 
-查找第$k$小点的值,不知道该怎么写。。。
+查找第$k$小点的值,不知道该怎么写……
 
 就写了一个普通$Treap$的$mink$
 ```
