--- a/_posts/9999-12-31-一些常用的公式.md
+++ b/_posts/9999-12-31-一些常用的公式.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      "一些常用的公式（欢迎补充）"
+title:      "一些常用的公式"
 date:       9999-12-31
 author:     "Dispwnl"
 header-img: "img/used/997.jpg"
