Update and rename 2018-06-15-莫比乌斯反演.md to 2018-06-15-莫比乌斯反演略解.md

--- a/_posts/2018-06-15-莫比乌斯反演略解.md
+++ b/_posts/2018-06-15-莫比乌斯反演略解.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      "莫比乌斯反演"
+title:      "莫比乌斯反演略解"
 date:       2018-06-15
 author:     "Dispwnl"
 header-img: "img/used/325.jpg"
@@ -8,6 +8,7 @@ catalog: true
 tags:
     - 数论
     - 莫比乌斯反演
+    - 整理
 ---
 >最近在肝莫比乌斯反演...推式子好难啊QAQ
 
