--- a/_posts/9999-12-31-骗访问量的机房人物列传by xMinh.md
+++ b/_posts/9999-12-31-骗访问量的机房人物列传by xMinh.md
@@ -142,7 +142,7 @@ $AC$数$1k$的人形自走$OJ$一号
 “你三只眼，你马王爷，你牛逼啊！”——教导主任2
 
 ### 人物列传$·Beretty$（$fuge$，$biefu$）
-在所有$OJ$从不掉分的怪物，所有掉分的场次都会因为各种不可抗力因素作废
+在所有$OJ$从不掉分的怪物，所有掉分的场次都会因为各种不可抗力因素作废（12.31upt：$fuge$ $CF$掉分啦哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈）
 
 经常会写出诡谲的解法进行花式$AC$表演
 
