--- a/_posts/2018-10-24-LOJ刷题记录.md
+++ b/_posts/2018-10-24-LOJ刷题记录.md
@@ -610,7 +610,7 @@ int main()
 ### [「一本通 5.2 练习 1」加分二叉树](https://loj.ac/problem/10158)
 #### 题解
 树形$dp$？区间$dp$？
-![](/img/？？？？？.jpg)
+![](/img/qaq/？？？？？.jpg)
 
 #### 代码
 ```
