--- a/_posts/2018-11-14-自闭的NOIP2018游记.md
+++ b/_posts/2018-11-14-自闭的NOIP2018游记.md
@@ -3,6 +3,7 @@ layout:         post
 title:          "自闭的NOIP2018游记"
 date:           2018-11-18
 author:         "Dispwnl"
+header-img:	"img/used/44560.jpg"
 catalog:    true
 tags:
     - 日常
@@ -72,7 +73,7 @@ $5$分钟打完过了大样例就没管了
 突然有了点自信，开始看$T2$
 
 很好不会
-![](/img/1213.jpg)
+![](/img/qaq/1213.jpg)
 
 怎么这么不给面子啊……我刚刚有点自信好不好qaq
 
@@ -82,7 +83,7 @@ $5$分钟打完过了大样例就没管了
 
 题意好懂，还是不会
 
-哇我不会$D1$就自闭到退役了吧![](/img/346.jpg)
+哇我不会$D1$就自闭到退役了吧![](/img/qaq/346.jpg)
 
 先把$40$分暴力打了
 
@@ -170,7 +171,7 @@ $T2$计数题？$T3$啥jb玩意
 
 偶然抬头，看见$n=m$
 
-![](/img/1213.jpg)
+![](/img/qaq/1213.jpg)
 
 花了$10$分钟写了$O(n^2)$，测极限数据跑了$0.95s$……
 
@@ -212,7 +213,7 @@ $AH$来我们宿舍装逼说自己上不了$449$然后被赶出去了
 
 结果$loli$不知道这件事以为我们集体翘课于是大中午非常生气的把人全叫回来了
 
-![](/img/？？？？？.jpg)
+![](/img/qaq/？？？？？.jpg)
 
 我妈：你们老师是不是喝醉了
 
