--- a/_posts/2018-10-11-一听名字就很可爱的猫树qwq.md
+++ b/_posts/2018-10-11-一听名字就很可爱的猫树qwq.md
@@ -21,7 +21,7 @@ tags:
 
 这时候毒瘤出题人就说了：诶你这复杂度不优秀，要求查询不要带$log$
 
-![](/img/675.jpg)
+![](/img/qaq/675.jpg)
 
 这时候一种可爱的数据结构就蹦出来解决ta啦，也就是猫树，复杂度是$O(nlogn+q)$（$O(nlogn)$预处理，$O(1)$查询）
 
