--- a/_posts/2018-10-16-[LUOGU4198]楼房重建.md
+++ b/_posts/2018-10-16-[LUOGU4198]楼房重建.md
@@ -65,7 +65,7 @@ N,M<=100000
 否则修改值对$val_{mid_1+1,r_1}$没有影响，直接递归求解$[l_1,mid_1]$并加上$val_{l_1,r_1}-val_{l_1,mid_1}$
 
 为什么不是$val_{mid_1+1,r_1}$？
-![](/img/？？？？？.jpg)
+![](/img/qaq/？？？？？.jpg)
 $val_{l,r}$表示区间$[l,r]$的**对自己**的贡献，也就是忽略了区间外的影响，而我们要求的是受$[l_1,mid_1]$影响的$[mid_1+1,r_1]$贡献，所以用$val_{l_1,r_1}-val_{l_1,mid_1}$，ta们都受$[l_1,mid_1]$的影响
 
 况且区间贡献在这里不满足区间相加性啊~~不然为什么要二次递归求解qaq~~
