--- a/_posts/2018-10-08-[HDU5215]Cycle.md
+++ b/_posts/2018-10-08-[HDU5215]Cycle.md
@@ -42,10 +42,10 @@ YES
 判断奇环，只要判断这个图是否是一个二分图即可
 
 判断偶环，建立$dfs$树的时候，如果遇到返祖边，两个点之间的边数为奇数说明存在偶环
-![](https://a-failure.github.io/img/study/cycle1.png)
+![](/img/study/cycle1.png)
 
 但是还可能有两个奇环拼成一个偶环的情况，如图：
-![](https://a-failure.github.io/img/study/cycle2.png)
+![](/img/study/cycle2.png)
 
 发现如果返祖边到的点在某个奇环之内，ta也存在偶环
 
