--- a/_posts/2018-06-20-[LUOGU4173]残缺的字符串.md
+++ b/_posts/2018-06-20-[LUOGU4173]残缺的字符串.md
@@ -110,14 +110,14 @@ int main()
 好了，这样匹配的方式定了，那匹配的顺序呢？
 
 一次匹配是像这样（后面省略了）：
-![](http://a-failure.github.io/img/study/canque.png)
+![](/img/study/canque.png)
 
 图中两条线段是两个字符串
 
 假设匹配都还是从左向右一位一位匹配，发现是不行的，因为每一位匹配出来的指数不同，无法相加
 
 所以我们倒着匹配，把$A$倒过来：
-![](http://a-failure.github.io/img/study/canque2.png)
+![](/img/study/canque2.png)
 
 这样匹配就行了，相乘的结果指数相同了
 
@@ -129,6 +129,8 @@ $a$中下标大于$m-1$的项都等于$0$，所以对结果无影响
 
 最后$F(i)$的$m-1$到$n-1$项就是匹配的结果
 
+
+好了现在这份代码过不了了![](/img/qaq/fish.gif)
 ### 代码
 ```
 # include<iostream>
