--- a/_posts/2018-06-27-[SHOI2015]脑洞治疗仪.md
+++ b/_posts/2018-06-27-[SHOI2015]脑洞治疗仪.md
@@ -104,7 +104,7 @@ $2 l r$：SHTSC 询问$[l,r]$区间内最大的脑洞有多大。
 
 把红色部分填进脑洞1
 
-![]/img/study/naodong2.png)
+![](/img/study/naodong2.png)
 
 这时红色剩余部分不够填充脑洞2了，于是二分脑洞2直到找到可以填充的部分
 
