--- a/_posts/2018-07-12-[IOI2011]Race.md
+++ b/_posts/2018-07-12-[IOI2011]Race.md
@@ -52,15 +52,15 @@ $n\leq 200000,K\leq 1000000$。
 
 在二分判断是否可行就行了
 
-判断$-1$我直接记录树中是否有小于等于$k$的路径~~是不是很SB~~
+判断$-1$直接记录树中是否有小于等于$k$的路径
 
-然后得了80...
+然后得了80……
 
-冷静分析，发现我的代码判断不了两条边在同一子树里的情况
+冷静分析，发现判断不了两条边在同一子树里的情况
 
-于是我把每棵子树染色，判断边的时候判断是否不在同一子树里
+于是把每棵子树染色，判断边的时候判断是否不在同一子树里
 
-然后...75？
+然后……75？
 
 奥忘清零了QAQ
 
@@ -68,8 +68,8 @@ $n\leq 200000,K\leq 1000000$。
 
 于是加了个枚举，枚举相同长度的边
 
-终于A了...复杂度应该比正常做法大一点~~枚举~~，开$O2$跑了$5s$多
-![](/img/346.jpg)
+终于A了……复杂度应该比正常做法大一点~~枚举~~，开$O2$跑了$5s$多
+![](/img/qaq/346.jpg)
 
 ### 代码
 ```
