--- a/_posts/2018-06-19-[AHOI2001]多项式乘法.md
+++ b/_posts/2018-06-19-[AHOI2001]多项式乘法.md
@@ -53,8 +53,8 @@ tags:
 ```
 if(ppos == std::string::npos) continue;
 ```
-![](/img/675.jpg)
-这是干啥啊...似乎是判断有没有'*'？
+![](/img/qaq/675.jpg)
+这是干啥啊……似乎是判断有没有'*'？
 
 然后加上就过了QAQ这种~~垃圾~~题还是别出了QAQ
 
