--- a/_posts/2018-03-23-济南颓废记.md
+++ b/_posts/2018-03-23-济南颓废记.md
@@ -113,7 +113,7 @@ T1用线段树搞的50分，然而正解似乎是平衡树或分块？！
 
 T3维护凸包直接放弃...没学不会~~直接输出样例~~
 
-下午发现得分100，T1线段树卡多过去一个点![](/img/happy.jpg)
+下午发现得分100，T1线段树卡多过去一个点![](/img/qaq/happy.jpg)
 
 题解听不懂简直了...
 
