--- a/_posts/2018-04-04-省选滚粗记.md
+++ b/_posts/2018-04-04-省选滚粗记.md
@@ -18,7 +18,7 @@ tags:
 
 >进队是不可能的，这辈子都不可能的
 
-![](/img/qiegewala.jpg)
+![](/img/qaq/qiegewala.jpg)
 
 上午啥也看不进去，下午A了几道水题
 
@@ -57,11 +57,11 @@ tags:
 
 $fuge$：“woc咱家队友真NB”
 
-昊哥：脚放桌子上一边吃鸡腿一边看视频~~就差抠脚了~~
+昊哥：脚放桌子上一边吃鸡腿一边看视频
 
 感觉不太对劲，回头一看$loli$正瞪着我……~~幸亏我没骂ta~~
 
-我：haha~~怎么™忘关门了~~![](/img/1234.jpg)
+我：haha~~怎么™忘关门了~~![](/img/qaq/1234.jpg)
 
 尬的一匹，然后就被教育了~~fuge好像被吓着了~~<code>rp-=inf<\code>
 
@@ -117,7 +117,7 @@ $T1$：网络流？？？$T2$：smg？？？$T3$：smg？？？
 
 一转身就看间$mhr$从书包里掏出脑袋大的面包扔池塘里喂鱼~~发出Duang的一声我估计砸晕至少3条鱼~~
 
-路人：![](/img/1213.jpg)这™哪个学校的
+路人：![](/img/qaq/1213.jpg)这™哪个学校的
 
 我们：不知道反正不是我们学校的
 
@@ -152,7 +152,7 @@ $xMinh$：癌$T1$二分+最大流啊
 
 同学$A$：您谁啊
 
-我：？？？![](/img/423.jpg)
+我：？？？![](/img/qaq/423.jpg)
 
 发现自己文化课炸了，物理怎么就讲电学了，数学三角函数都学完了，语文$3+$文言文，英语$2+$单元单词笔记？
 
@@ -160,7 +160,7 @@ $xMinh$：癌$T1$二分+最大流啊
 
 老师：$wjl$你这个会吗
 
-我：啊？啥？![](/img/1231.jpg)
+我：啊？啥？![](/img/qaq/1231.jpg)
 
 慢慢补吧……
 
