--- a/_posts/2018-04-09-2018SD省选题解.md
+++ b/_posts/2018-04-09-2018SD省选题解.md
@@ -9,35 +9,28 @@ tags:
     - 比赛
     - 补坑
 ---
-虽然我省选考的炸的一匹，但还是~~厚颜无耻~~尽心尽力的肝完这些题写一下题解嘛qwq
-
-由于本蒟蒻方法低下+常数巨大+过于菜鸡，所以代码效率不是很好，好多题还是抄的题解QAQ
-
-题目就不放了...
 
 ## Day1
 ### [一双木棋](https://www.luogu.org/problemnew/show/P4363)
-由于$n,m<=10$，可以考虑状态压缩
+由于$n,m\le 10$，可以考虑状态压缩
 
 又因为某个点能放的前提是左边和上边都有棋子
 
 所以表示轮廓线
 
-0表示横边界，1表示竖边界
+$0$表示横边界，$1$表示竖边界
 
-那么$3*3$棋盘（其他一样）初始状态就是$000111$，边界条件是$111000$
+那么$3\times 3$棋盘（其他一样）初始状态就是$000111$，边界条件是$111000$
 
 这样就可以每次根据轮廓线走，有拐角的时候就可以放棋子
 
-设$w$表示轮廓线，从0~n+m-2用$i$枚举每一位，w>>i&1如果是1就是竖边界，0就是横边界
+设$w$表示轮廓线，从$0\rightarrow n+m-2$用$i$枚举每一位，w>>i&1如果是$1$就是竖边界，$0$就是横边界
 
-w>>i&3如果=1说明没有拐角，即不可以放棋子
+w>>i&3如果$=1$说明没有拐角，即不可以放棋子
 
 所以可以用$f$数组表示这个状态轮廓线到最后能获得最大的分数
 
-把A走看出加分，B走看成减分
-
-（思路和代码实现来自[这个dalao](https://anoxiacxy.blog.luogu.org/solution-p4363)）
+把$A$走看出加分，$B$走看成减分
 
 ### 代码
 ```
@@ -87,13 +80,13 @@ int main()
 }
 ```
 ### [IIIDX](https://www.luogu.org/problemnew/show/P4364)
-这道题60分还是很好拿的（那我也没拿到）...
+这道题$60$分还是很好拿的（那我也没拿到）……
 
 可以发现编号之间的关系是一棵树
 
-然后就可以xjb贪心了
+然后就可以贪心了
 
-后序遍历这棵树，把从小到大排序的难度依次填入...然后就有60分![](/img/1234.jpg)
+后序遍历这棵树，把从小到大排序的难度依次填入……然后就有$60$分![](/img/qaq/1234.jpg)
 
 ### 代码
 ```
@@ -157,9 +150,7 @@ int main()
 
 可以用一个数组记录这个点向右有多少连续相同的跟这个点难度相同的数（注意是排序后）
 
-然后每次询问出一个答案后就可以看ta向右最远能到达哪个点，并将那个点作为答案，这个点标记为选过的，以后向右延伸时应选这个点-1~~慢慢参悟~~
-
-（思路和代码实现来自[这个dalao](https://sakits.com/bzoj5249)）
+然后每次询问出一个答案后就可以看ta向右最远能到达哪个点，并将那个点作为答案，这个点标记为选过的，以后向右延伸时应选这个点$-1$
 
 ### 代码
 ```
@@ -265,19 +256,17 @@ int main()
 }
 ```
 ### [秘密袭击](https://www.luogu.org/problemnew/show/P4365)
-正解：FFT+线段树合并！[](/img/112.jpg)
+正解：$FFT$+线段树合并！[](/img/qaq/112.jpg)
 
-这是蒟蒻应该会的东西吗？
+不会
 
-所以我们考虑暴力的方法![](/img/01.png)
+所以我们考虑暴力的方法![](/img/qaq/01.png)
 
-考虑树形$dp$，$f[i][k]$表示点$i$作为第$k$大的点的方案数
+考虑树形$dp$，$f_{i,k}$表示点$i$作为第$k$大的点的方案数
 
 然后就枚举每个点向下跑
 
-状态转移方程挺好推的...就这样
-
-（思路和代码实现来自[这个dalao](https://www.luogu.org/blog/user17800/solution-p4365)）
+状态转移方程挺好推的……就这样
 
 ### 代码
 ```
@@ -343,9 +332,8 @@ int main()
 
 ## Day2
 ### [劈配](https://www.luogu.org/problemnew/show/P4382)
-emmmm这道题其实思路挺简单的~~我还肝了一天~~
 
-按编号遍历每个人，再按志愿从小到大遍历志愿，动态加边并判断加上后最大流是否=1
+按编号遍历每个人，再按志愿从小到大遍历志愿，动态加边并判断加上后最大流是否$=1$
 
 是就退出，不是就拆下加上的边并向下遍历
 
@@ -353,11 +341,9 @@ emmmm这道题其实思路挺简单的~~我还肝了一天~~
 
 每次二分调换一下再判断就行了
 
-这里有个优化：因为二分每次都重建边很麻烦，可以存0~n-1最优情况下的图，然后二分判断就可以直接在前一个图上面加边
+这里有个优化：因为二分每次都重建边很麻烦，可以存$0\rightarrow n-1$最优情况下的图，然后二分判断就可以直接在前一个图上面加边
 
-拆边也是个优化，但本蒟蒻不知道领接表的拆边怎么写，于是就用了$vector$...
-
-考试的时候想了一个奇葩的贪心网络流，感觉能得60+，结果脑抽加了一句这个志愿没出现过就输出$i$，然后只有10分QAQ
+考试的时候想了一个贪心网络流，感觉能得$60+$，结果脑抽加了一句这个志愿没出现过就输出$i$，然后只有$10$分QAQ
 
 ### 代码
 ```
@@ -547,4 +533,4 @@ int main()
 	return 0;
 }
 ```
-下两道题都没看懂告辞（光速逃
+下两道题都没看懂告辞![](/img/qaq/fish.gif)
