--- a/_posts/2018-04-19-[NOI2007]货币兑换.md
+++ b/_posts/2018-04-19-[NOI2007]货币兑换.md
@@ -134,7 +134,7 @@ $f_i=max(f_{i-1},\frac {f_j}{(r_ja_j+b_j)}r_ia_i+\frac {f_j}{(r_ja_j+b_j)b_i})$
 
 而这个凸包加点不是依次的，听说这样不用$CDQ$分治就是用$Splay$维护？
 
-![](/img/2.gif/)
+![](/img/qaq/2.gif/)
 
 然后一通瞎打就行了
 
