--- a/_posts/9999-12-31-日记+机房趣事.md
+++ b/_posts/9999-12-31-日记+机房趣事.md
@@ -444,3 +444,19 @@ $fuge$：那我教你怎么消遣
 $fuge$~~对石化的我说~~：你看这样是不是肥肠有趣
 
 ~~有趣你大爷~~
+
+------
+
+昊哥回来ta的桌面变成了这个样子：![](/img/qwq/haoge.jpg)
+
+我回来桌面~~被Asia和Jan哥~~变成了这个样子：![](/img/qwq/me.png)
+
+$Jan$哥的桌面~~被Asia~~变成了这个样子：![](/img/qwq/jange.png)
+
+------
+
+$fuge$突然对$Refun$大喊一声：“我学会圆方树啦！，你完蛋了！”
+
+然后猛地敞开怀做出了拥抱天空的姿势头以$60°$微张大嘴面带微笑直视天花板上功率14$w$的日光灯过了差不多$3s$外套从身上自然滑落掉到椅子上
+
+![](/img/qwq/fuge.png)
