--- a/_posts/2018-12-30-[HEOI2016]字符串.md
+++ b/_posts/2018-12-30-[HEOI2016]字符串.md
@@ -48,18 +48,21 @@ aaaaa
 对于100%的数据，1<=n,m<=100,000,字符串中仅有小写英文字母，a<=b,c<=d,1<=a,b,c,d<=n
 
 ### 题解
+
 发现这样一个性质：
 
 > 如果长度$x$是一个公共前缀，那么长度$x'$也是一个公共前缀
 
 所以可以二分答案了，这样问题就转化成了求是否存在长度为$x$的公共前缀
 
+$SA$做法：
+
 因为$c$的位置已经给定了，所以可以求出来与后缀$[c,n]$的$lcp\ge x$的$rank$区间$[L,R]$，这个可以二分求定
 
 现在就需要检验$[a,b-x+1]$中是否存在$rank_i$在$[L,R]$内，对字符串建立$rank$为值域的主席树，每次区间查询即可
 
 ### 代码
-```
+```c++
 # include<iostream>
 # include<cstring>
 # include<cstdio>
@@ -179,3 +182,121 @@ int main()
 	return 0;
 }
 ```
+
+$SAM​$做法：
+
+同样是二分答案$mid$，令$pos=c+mid$，只需要找$right$集合中有$pos$的状态ta的$len$是否大于等于$mid$并且在区间$[a,b]$内
+
+记录每个位置在$SAM$上对应的节点，倍增查找第一个$len$大于等于$mid$的节点，线段树合并判断$right$集合内是否有位置在区间$[a,b]$里就行了
+
+$luogu$开$O2$会<code>TLE</code>>……不知道为什么QAQ
+
+### 代码
+
+```
+# include<iostream>
+# include<cstring>
+# include<cstdio>
+# include<algorithm>
+# define tl s[k].l
+# define tr s[k].r
+# define mid (l+r>>1)
+using namespace std;
+const int MAX=2e5+5;
+struct p{
+	int l,r;
+}s[MAX<<5];
+int n,m,tot;
+int rt[MAX];
+char a[MAX];
+void change(int l,int r,int &k,int x)
+{
+	if(!k) k=++tot;
+	if(l==r) return;
+	if(x<=mid) change(l,mid,tl,x);
+	else change(mid+1,r,tr,x);
+}
+int merge(int x,int y)
+{
+	if(!x||!y) return x+y;
+	int k=++tot;
+	return tl=merge(s[x].l,s[y].l),tr=merge(s[x].r,s[y].r),k;
+}
+bool ask(int l,int r,int k,int L,int R)
+{
+	if(R<l||r<L||!k) return 0;
+	if(l>=L&&r<=R) return 1;
+	if(ask(l,mid,tl,L,R)) return 1;
+	return ask(mid+1,r,tr,L,R);
+}
+struct SAM{
+	int l,r,L;
+	int len[MAX],fa[MAX],tax[MAX],id[MAX],pos[MAX];
+	int son[MAX][26],f[19][MAX];
+	SAM() {l=r=1;}
+	void ins(int x,int id)
+	{
+		int tt=r;
+		len[r=++l]=++L,change(1,n,rt[r],id),pos[id]=r;
+		for(;tt&&!son[tt][x];tt=fa[tt])
+		  son[tt][x]=r;
+		if(!tt) return void(fa[r]=1);
+		int qwq=son[tt][x];
+		if(len[qwq]==len[tt]+1) return void(fa[r]=qwq);
+		len[++l]=len[tt]+1,fa[l]=fa[qwq],fa[r]=fa[qwq]=l;
+		for(int i=0;i<26;++i)
+		  son[l][i]=son[qwq][i];
+		for(int i=tt;son[i][x]==qwq;i=fa[i])
+		  son[i][x]=l;
+	}
+	void Init()
+	{
+		for(int i=1;i<=l;++i)
+		  ++tax[len[i]],f[0][i]=fa[i];
+		for(int i=1;i<=18;++i)
+		  for(int j=1;j<=l;++j)
+		    f[i][j]=f[i-1][f[i-1][j]];
+		for(int i=1;i<=n;++i)
+		  tax[i]+=tax[i-1];
+		for(int i=l;i>=1;--i)
+		  id[tax[len[i]]--]=i;
+		for(int i=l;i>=1;--i)
+		  if(fa[id[i]]) rt[fa[id[i]]]=merge(rt[fa[id[i]]],rt[id[i]]);
+	}
+	bool look(int A,int B,int c,int __L)
+	{
+		int d=c+__L-1,x=pos[d];
+		if(len[x]<__L) return 0;
+		for(int i=18;i>=0;--i)
+		  if(len[f[i][x]]>=__L) x=f[i][x];
+		return ask(1,n,rt[x],A+__L-1,B);
+	}
+}_S;
+int read()
+{
+	int x(0);
+	char ch=getchar();
+	for(;!isdigit(ch);ch=getchar());
+	for(;isdigit(ch);x=x*10+ch-48,ch=getchar());
+	return x;
+}
+int main()
+{
+	n=read(),m=read(),scanf("%s",a+1);
+	for(int i=1;i<=n;++i)
+	  _S.ins(a[i]-'a',i);
+	_S.Init();
+	for(int i=1,a,b,c,d,l,r,ans;i<=m;++i)
+	  {
+	  	a=read(),b=read(),c=read(),d=read(),l=1,r=d-c+1,ans=0;
+	  	while(l<=r)
+	  	{
+	  		if(_S.look(a,b,c,mid)) ans=mid,l=mid+1;
+	  		else r=mid-1;
+		}
+		printf("%d\n",ans);
+	  }
+	return 0;
+}
+```
+
