--- a/_posts/2018-12-30-[HEOI2016]字符串.md
+++ b/_posts/2018-12-30-[HEOI2016]字符串.md
@@ -185,7 +185,7 @@ int main()
 
 $SAM​$做法：
 
-同样是二分答案$mid$，令$pos=c+mid$，只需要找$right$集合中有$pos$的状态ta的$len$是否大于等于$mid$并且在区间$[a,b]$内
+同样是二分答案$mid$，令$pos=c+mid$，只需要找$right$集合中有$pos$的状态ta的$len$是否大于等于$mid$并且在区间$[a,b]​$内
 
 记录每个位置在$SAM$上对应的节点，倍增查找第一个$len$大于等于$mid$的节点，线段树合并判断$right$集合内是否有位置在区间$[a,b]$里就行了
 
@@ -193,7 +193,7 @@ $luogu$开$O2$会<code>TLE</code>>……不知道为什么QAQ
 
 ### 代码
 
-```
+```c++
 # include<iostream>
 # include<cstring>
 # include<cstdio>
