--- a/_posts/2018-12-30-[HEOI2016]字符串.md
+++ b/_posts/2018-12-30-[HEOI2016]字符串.md
@@ -7,7 +7,9 @@ header-img: "img/used/4263.jpg"
 catalog: false
 tags:
     - 后缀数组
+    - 后缀自动机
     - 主席树
+    - 线段树
     - 二分答案
 ---
 ## [题目](https://www.luogu.org/problemnew/show/P4094)
