--- a/_posts/2018-12-30-[HEOI2016]字符串.md
+++ b/_posts/2018-12-30-[HEOI2016]字符串.md
@@ -191,7 +191,7 @@ $SAM​$做法：
 
 记录每个位置在$SAM$上对应的节点，倍增查找第一个$len$大于等于$mid$的节点，线段树合并判断$right$集合内是否有位置在区间$[a,b]$里就行了
 
-$luogu$开$O2$会<code>TLE</code>>……不知道为什么QAQ
+$luogu$开$O2$会<code>TLE</code>……不知道为什么QAQ
 
 ### 代码
 
