--- a/_posts/2018-03-31-[NOI2011]阿狸的打字机.md
+++ b/_posts/2018-03-31-[NOI2011]阿狸的打字机.md
@@ -1,4 +1,4 @@
-﻿---
+---
 layout:     post
 title:      "[NOI2011]阿狸的打字机"
 date:       2018-03-31
@@ -63,13 +63,9 @@ aPaPBbP
 
 这题好妙啊...
 
-首先搞这道题得先搞懂AC自动机是什么东西~~然而ta并不能自动AC~~
+首先这题$40$分暴力做法是$kmp$直接匹配
 
-这里就不详讲啦~~其实是我也没怎么搞懂~~
-
-首先这题40分暴力做法是$kmp$直接匹配
-
-我们考虑同样作为字符串匹配算法的AC自动机
+我们考虑同样作为字符串匹配算法的$AC$自动机
 
 可以发现$fail$指针有一个神奇的性质：
 
@@ -79,20 +75,20 @@ aPaPBbP
 
 树结构+子树求和，想到了什么？
 
-$dfs$序+线段树就可以搞了~~我就不用树状数组~~
+$dfs$序+线段树就可以搞了
 
 所以按照原来的$Tire$树向下找，顺便在$dfs$序上标记
 
 将询问离线，按$y$值排序，遍历字符串
 
-然后对于每一个'P'，因为这是打印，统计当前结尾对应的$y$所对应的询问，里面的$x$的子树和（好绕）
+然后对于每一个<code>'P'</code>，因为这是打印，统计当前结尾对应的$y$所对应的询问，里面的$x$的子树和（好绕）
 
-对于每一个'B'，因为这是删除，所以讲当前节点的$dfs$序对应的值-1，并返回到ta的父节点
+对于每一个<code>'B'</code>，因为这是删除，所以讲当前节点的$dfs$序对应的值$-1$，并返回到ta的父节点
 
-对于其他，对应的$dfs$序+1，然后就离线输出就行了
+对于其他，对应的$dfs$序$+1$，然后就离线输出就行了
 
 ### 代码
-```
+```c++
 # include<iostream>
 # include<cstring>
 # include<cstdio>
