--- a/_posts/2017-10-12-[ZJOI2007]时态同步.md
+++ b/_posts/2017-10-12-[ZJOI2007]时态同步.md
@@ -53,7 +53,7 @@ tags:
 
 因为改变的边越靠近源点，对以后的点就影响就越大
 
-如果有多条路都经过一个点，必须强制使用时少的路+1直到与用时最长的路用时相等
+如果有多条路都经过一个点，必须强制使用时少的路$+1$直到与用时最长的路用时相等
 
 所以用$f$储存到达$i$点用的最长时间，然后$dfs$一遍求出$f$
 
@@ -68,7 +68,7 @@ $y$到$x$的用时还要加上它们之间的距离
 输出$ans$就行了
 
 ### 代码
-```
+```c++
 # include<iostream>
 # include<cstdio>
 # include<cstring>
