--- a/_posts/2017-11-06-[LUOGU2124]奶牛美容.md
+++ b/_posts/2017-11-06-[LUOGU2124]奶牛美容.md
@@ -1,4 +1,4 @@
-﻿---
+---
 layout:     post
 title:      "[LUOGU2124]奶牛美容"
 date:       2017-11-06
@@ -9,6 +9,7 @@ tags:
     - 搜索
     - 瞎搞
 ---
+
 ## [题目](https://www.luogu.org/problemnew/show/P2124)
 ### 题目描述
 
@@ -37,7 +38,7 @@ tags:
 
 $bfs$+$dfs$
 
-枚举4个方向，$bfs$将每个点染色，形成三块颜色块
+枚举$4$个方向，$bfs$将每个点染色，形成三块颜色块
 
 $dfs$处理每个颜色块到其他点的最短距离，注意是点
 
@@ -45,14 +46,12 @@ $dfs$处理每个颜色块到其他点的最短距离，注意是点
 
 处理处每个颜色块的最小距离，找出两个最小的加起来
 
-注意$ans$最后要-2，因为$dfs$处理时点和涂色点有重合（看代码）
+注意$ans$最后要$-2$，因为$dfs$处理时点和涂色点有重合
 
-我前几次处理颜色块都是处理的点
-
-竟然还得了66分。。。
+我前几次处理颜色块都是处理的点竟然还得了$66$分……
 
 ### 代码
-```
+```c++
 # include<iostream>
 # include<cstdio>
 # include<queue>
