--- a/_posts/2017-12-23-[LUOGU4012]深海机器人问题.md
+++ b/_posts/2017-12-23-[LUOGU4012]深海机器人问题.md
@@ -80,14 +80,14 @@ $1\le b\le 6$
 
 然后把各个点从坐标压为一个数表示$(x-1)\times Q+y$
 
-每个点与南边的点连两条边，一条容量为$1$，费用为标本价值（先到的机器人）
+每个点与南边的点连两条边，一条容量为$1​$，费用为标本价值（先到的机器人）
 
-一条容量为$inf$，费用为$0$，东边同理（注意建边顺序）
+一条容量为$inf​$，费用为$0​$，东边同理（注意建边顺序）
 
 源点与给出的出发点连，容量为机器人数，汇点同理，然后输出最大费用（要取负）
 
 ### 代码
-```
+```c++
 # include<iostream>
 # include<cstdio>
 # include<cstring>
