--- a/_posts/2017-12-24-[USACO16OPEN]248.md
+++ b/_posts/2017-12-24-[USACO16OPEN]248.md
@@ -40,26 +40,23 @@ tags:
 
 $i-1$是因为是相邻的区间，所以$i$只能取一次
 
-如果$f_{j,i-1}=f_{i,k}$
+如果$f_{j,i-1}=f_{i,k}$，$f_{j,k}=max(f_{j,i-1}+1)$（注意不是$\times 2$，这是$248$不是$2048$）
 
-$f_{j,k}=max(f_{j,i-1}+1)$（注意不是$\times 2$，这是248不是2048）
-
-然后试几组数据会发现答案不对
-
-这是因为前面的区间可以被后面更新的区间更新
+然后试几组数据会发现答案不对，因为前面的区间可以被后面更新的区间更新
 
 举个例子
 
 #### $3\;2\;2\;1$
 
-显然最优解是先合并两个$2$再用合出来的$3$与原来的$3$合并
+显然最优解是先合并两个$2​$再用合出来的$3​$与原来的$3​$合并
 
 为了解决这一问题，多次循环就好了
 
 保证后面合出来的区间能与前面的区间合并
 
-代码：
-```cpp
+### 代码
+
+```c++
 # include<iostream>
 # include<cstdio>
 # include<cstring>
