--- a/_posts/9999-12-31-常见错误.md
+++ b/_posts/9999-12-31-常见错误.md
@@ -37,5 +37,7 @@ tags:
 - ```freopen```检查里面$w$的大小写~~血的教训~~
 - 题目是多组数据的时候注意要把数据全读入了再特判~~差点血的教训~~
 - 一定要读懂题，学好语文非常重要
+- 广义$SAM$不要用基数排序处理线段树合并
+- 指针移动的时候注意不要出边界
 
 ### [Cansult](https://cansult.ga/22925.html)
