--- a/_posts/9999-12-31-常见错误.md
+++ b/_posts/9999-12-31-常见错误.md
@@ -37,7 +37,7 @@ tags:
 - ```freopen```检查里面$w$的大小写~~血的教训~~
 - 题目是多组数据的时候注意要把数据全读入了再特判~~差点血的教训~~
 - 一定要读懂题，学好语文非常重要
-- 广义$SAM$不要用基数排序处理线段树合并
+- 广义$SAM$不要用基数排序处理线段树合并~~其实好像是可以的但是我不想写[对的广义SAM](https://blog.csdn.net/elijahqi/article/details/79782107?utm_source=blogxgwz2)了就这么认为吧~~
 - 指针移动的时候注意不要出边界
 
 ### [Cansult](https://cansult.ga/22925.html)
