--- a/_posts/9999-12-31-常见错误.md
+++ b/_posts/9999-12-31-常见错误.md
@@ -40,4 +40,5 @@ tags:
 - 广义$SAM$不要用基数排序处理线段树合并~~其实好像是可以的但是我不想写[对的广义SAM](https://blog.csdn.net/elijahqi/article/details/79782107?utm_source=blogxgwz2)了就这么认为吧~~
 - 指针移动的时候注意不要出边界
 
-### [Cansult](https://cansult.ga/22925.html)
+[$Cansult$](https://cansult.ga/22925.html)
+
