--- a/_posts/2019-01-08-[CTSC2012]熟悉的文章.md
+++ b/_posts/2019-01-08-[CTSC2012]熟悉的文章.md
@@ -24,12 +24,12 @@ tags:
 举个例子：
 
 小强的作文库里包含了如下 2 个字符串：
-```
+```plain
 10110
 000001110
 ```
 有一篇待考察的作文是：
-```
+```plain
 1011001100
 ```
 小强计算出这篇作文 L 的最大值是 4，因为待考察的作文可以视作'10110'+'0110'+'0'，其中'10110'和'0110'被判定为 “ 熟悉 ” 的。而当 L = 5 或是更大的时候，不存在符合题意的分割方法。所以，这篇作文的 L 0 = 4。小强认为阿米巴作文的 L 0 值比其他同学的明显要大。请你帮他验证一下。
@@ -47,14 +47,14 @@ tags:
 
 ### 输入输出样例
 #### 输入样例#1： 
-```
+```plain
 1 2
 10110
 000001110
 1011001100
 ```
 #### 输出样例#1： 
-```
+```plain
 4
 ```
 ### 说明
