--- a/_posts/2019-01-09-[BZOJ3413]匹配.md
+++ b/_posts/2019-01-09-[BZOJ3413]匹配.md
@@ -27,7 +27,7 @@ tags:
 输出m行，第i行表示第si和S匹配所比较的次数。
 
 Sample Input
-```
+```plain
 7
 1090901
 4
@@ -38,7 +38,7 @@ Sample Input
 ```
 
 ### Sample Output
-```
+```plain
 7
 10
 3
