--- a/_posts/2017-11-06-[LUOGU2124]奶牛美容.md
+++ b/_posts/2017-11-06-[LUOGU2124]奶牛美容.md
@@ -21,7 +21,7 @@ tags:
 
 ### 输入输出样例
 #### 输入样例#1： 
-```
+```plain
 6 16
 ................
 ..XXXX....XXX...
@@ -31,7 +31,7 @@ tags:
 ..XXX....XXX....
 ```
 #### 输出样例#1： 
-```
+```plain
 4
 ```
 ### 题解
