--- a/_posts/2019-01-09-[CF1037H]Security.md
+++ b/_posts/2019-01-09-[CF1037H]Security.md
@@ -22,7 +22,7 @@ tags:
 
 #### input
 
-```
+```plain
 baa
 5
 1 2 ba
@@ -35,7 +35,7 @@ baa
 #### output
 
 
-```
+```plain
 -1
 aa
 ba
@@ -45,7 +45,7 @@ ba
 
 #### input
 
-```
+```plain
 bacb
 4
 1 2 ba
@@ -56,7 +56,7 @@ bacb
 
 #### output
 
-```
+```plain
 -1
 c
 b
@@ -65,7 +65,7 @@ cb
 
 #### input
 
-```
+```plain
 bba
 1
 1 1 b
@@ -73,7 +73,7 @@ bba
 
 #### output
 
-```
+```plain
 -1
 ```
 
