--- a/_posts/2019-01-09-[NOI2018]你的名字.md
+++ b/_posts/2019-01-09-[NOI2018]你的名字.md
@@ -31,7 +31,7 @@ tags:
 
 ### 输入输出样例
 #### 输入样例#1： 
-```
+```plain
 scbamgepe
 3
 smape 2 7
@@ -39,7 +39,7 @@ sbape 3 8
 sgepe 1 9
 ```
 #### 输出样例#1： 
-```
+```plain
 12
 10
 4
