--- a/_posts/2017-12-23-[LUOGU4012]深海机器人问题.md
+++ b/_posts/2017-12-23-[LUOGU4012]深海机器人问题.md
@@ -49,7 +49,7 @@ $a$行和$b$行输入时横纵坐标要反过来
 
 ### 输入输出样例
 #### 输入样例#1： 
-```
+```plain
 1 1
 2 2
 1 2
@@ -62,7 +62,7 @@ $a$行和$b$行输入时横纵坐标要反过来
 2 2 2
 ```
 #### 输出样例#1： 
-```
+```plain
 42
 ```
 ### 说明
