--- a/_posts/2017-12-24-[USACO16OPEN]248.md
+++ b/_posts/2017-12-24-[USACO16OPEN]248.md
@@ -14,7 +14,7 @@ tags:
 
 ### 输入输出样例
 #### 输入样例#1： 
-```
+```plain
 4
 1
 1
@@ -22,7 +22,7 @@ tags:
 2
 ```
 #### 输出样例#1： 
-```
+```plain
 3
 ```
 ### 题解
