--- a/_posts/2018-03-15-[SCOI2014]方伯伯运椰子.md
+++ b/_posts/2018-03-15-[SCOI2014]方伯伯运椰子.md
@@ -47,7 +47,7 @@ tags:
 
 ### 输入输出样例
 #### 输入样例#1：
-```
+```plain
 5 10
 1 5 13 13 0 412
 2 5 30 18 396 148
@@ -61,7 +61,7 @@ tags:
 6 2 26 38 1000 22
 ```
 #### 输出样例#1：
-```
+```plain
 103.00
 ```
 ### 说明
