--- a/_posts/2018-04-03-[LUOGU3398]仓鼠找sugar.md
+++ b/_posts/2018-04-03-[LUOGU3398]仓鼠找sugar.md
@@ -28,7 +28,7 @@ tags:
 
 ### 输入输出样例
 #### 输入样例#1： 
-```
+```plain
 5 5
 2 5
 4 2
@@ -41,7 +41,7 @@ tags:
 3 5 1 4
 ```
 #### 输出样例#1： 
-```
+```plain
 Y
 N
 Y
