--- a/_posts/2018-04-03-[NOI2008]志愿者招募.md
+++ b/_posts/2018-04-03-[NOI2008]志愿者招募.md
@@ -22,7 +22,7 @@ tags:
 
 ### 输入输出样例
 #### 输入样例#1：
-```
+```plain
 3 3
 2 3 4
 1 2 2
@@ -30,7 +30,7 @@ tags:
 3 3 2
 ```
 #### 输出样例#1： 
-```
+```plain
 14
 ```
 ### 说明
