--- a/_posts/2018-04-14-[NOI2012]美食节.md
+++ b/_posts/2018-04-14-[NOI2012]美食节.md
@@ -22,7 +22,7 @@ CZ市为了欢迎全国各地的同学，特地举办了一场盛大的美食节
 
 ### 输入输出样例
 #### 输入样例#1：
-``` 
+```plain
 3 2 
 3 1 1 
 5 7 
@@ -30,7 +30,7 @@ CZ市为了欢迎全国各地的同学，特地举办了一场盛大的美食节
 8 9
 ```
 #### 输出样例#1： 
-```
+```plain
 47
 ```
 ### 说明
