--- a/_posts/2018-04-15-[LUOGU1263]宫廷守卫.md
+++ b/_posts/2018-04-15-[LUOGU1263]宫廷守卫.md
@@ -35,14 +35,14 @@ ai,j=2，表示方格[i,j]是墙。
 
 ### 输入输出样例
 #### 输入样例#1： 
-```
+```plain
 3 4
 2 0 0 0
 2 2 2 1
 0 1 0 2
 ```
 #### 输出样例#1： 
-```
+```plain
 2
 1 2
 3 3
