--- a/_posts/2018-04-24-[NOI2012]魔幻棋盘.md
+++ b/_posts/2018-04-24-[NOI2012]魔幻棋盘.md
@@ -38,7 +38,7 @@ tags:
 
 ### 输入输出样例
 #### 输入样例#1： 
-```
+```plain
 2 2
 1 1
 4
@@ -50,7 +50,7 @@ tags:
 0 0 0 1 1
 ```
 #### 输出样例#1： 
-```
+```plain
 6
 6
 ```
