--- a/_posts/2018-05-07-[JSOI2008]火星人.md
+++ b/_posts/2018-05-07-[JSOI2008]火星人.md
@@ -40,7 +40,7 @@ tags:
 
 ### 输入输出样例
 #### 输入样例#1： 
-```
+```plain
 madamimadam
 7
 Q 1 7
@@ -52,7 +52,7 @@ I 10 a
 Q 2 11
 ```
 #### 输出样例#1： 
-```
+```plain
 5
 1
 0
