--- a/_posts/2018-03-18-[SDOI2017]树点涂色.md
+++ b/_posts/2018-03-18-[SDOI2017]树点涂色.md
@@ -43,7 +43,7 @@ Bob一共会进行m次操作
 
 ### 输入输出样例
 #### 输入样例#1：
-```
+```plain
 5 6
 1 2
 2 3
@@ -57,7 +57,7 @@ Bob一共会进行m次操作
 2 4 5
 ```
 #### 输出样例#1：
-```
+```plain
 3
 4
 2
