--- a/_posts/2018-03-18-[ZJOI2012]网络.md
+++ b/_posts/2018-03-18-[ZJOI2012]网络.md
@@ -61,7 +61,7 @@ d) 其他情况，成功修改边的颜色，并输出“Success.”。
 
 ### 输入输出样例
 #### 输入样例#1： 
-```
+```plain
 4 5 2 7
 1
 2
@@ -81,7 +81,7 @@ d) 其他情况，成功修改边的颜色，并输出“Success.”。
 2 1 1 4
 ```
 #### 输出样例#1：
-```
+```plain
 4
 Success.
 Error 2.
