--- a/_posts/2018-04-03-[AHOI2009]最小割.md
+++ b/_posts/2018-04-03-[AHOI2009]最小割.md
@@ -35,7 +35,7 @@ $M$对每条单向边，按输入顺序，依次输出一行，包含两个非$0
 
 ### 输入输出样例
 #### 输入样例#1： 
-```
+```plain
 6 7 1 6
 1 2 3
 1 3 2
@@ -46,7 +46,7 @@ $M$对每条单向边，按输入顺序，依次输出一行，包含两个非$0
 5 6 3
 ```
 #### 输出样例#1： 
-```
+```plain
 1 0
 1 0
 0 0
