--- a/_posts/2018-06-17-[SCOI2009]游戏.md
+++ b/_posts/2018-06-17-[SCOI2009]游戏.md
@@ -58,19 +58,19 @@ windy的操作如下
 
 ### 输入输出样例
 #### 输入样例#1： 
-```
+```plain
 3
 ```
 #### 输出样例#1： 
-```
+```plain
 3
 ```
 #### 输入样例#2： 
-```
+```plain
 10
 ```
 #### 输出样例#2： 
-```
+```plain
 16
 ```
 ### 说明
