--- a/_posts/2018-06-19-[AHOI2001]多项式乘法.md
+++ b/_posts/2018-06-19-[AHOI2001]多项式乘法.md
@@ -30,12 +30,12 @@ tags:
 
 ### 输入输出样例
 #### 输入样例#1： 
-```
+```plain
 (5a^2+3a^1+2)*(4a^1+1)
 (5a^1+1)* (5a^1+1)
 ```
 #### 输出样例#1： 
-```
+```plain
 20a^3+17a^2+11a^1+2
 25a^2+10a^1+1
 ```
@@ -50,7 +50,7 @@ tags:
 最后在网上找了一个博客，试了几组数据都正确~~并且ta还不能处理没有括号的情况~~
 
 看到ta的代码中有一行：
-```
+```plain
 if(ppos == std::string::npos) continue;
 ```
 ![](/img/qaq/675.jpg)
