--- a/_posts/2018-07-10-[LNOI2014]LCA.md
+++ b/_posts/2018-07-10-[LNOI2014]LCA.md
@@ -21,7 +21,7 @@ tags:
 
 ### 输入输出样例
 #### 输入样例#1：
-``` 
+```plain
 5 2
 0
 0
@@ -31,7 +31,7 @@ tags:
 1 4 2
 ```
 #### 输出样例#1： 
-```
+```plain
 8
 5
 ```
