--- a/_posts/2018-08-20-[LUOGU3676]小清新数据结构题.md
+++ b/_posts/2018-08-20-[LUOGU3676]小清新数据结构题.md
@@ -36,7 +36,7 @@ tags:
 
 ### 输入输出样例
 #### 输入样例#1：
-```
+```plain
 4 5
 1 2
 2 3
@@ -49,7 +49,7 @@ tags:
 2 4
 ```
 #### 输出样例#1：
-```
+```plain
 121
 140
 194
