--- a/_posts/2018-08-28-[SDOI2017]数字表格.md
+++ b/_posts/2018-08-28-[SDOI2017]数字表格.md
@@ -37,14 +37,14 @@ Doris的表格中共有$n×m$个数，她想知道这些数的乘积是多少。
 
 ### 输入输出样例
 #### 输入样例#1： 
-```
+```plain
 3
 2 3
 4 5
 6 7
 ```
 #### 输出样例#1： 
-```
+```plain
 1
 6
 960
