--- a/_posts/2018-08-29-[BZOJ3944]Sum.md
+++ b/_posts/2018-08-29-[BZOJ3944]Sum.md
@@ -23,7 +23,7 @@ tags:
 一共T行，每行两个用空格分隔的数ans1,ans2
 
 ### Sample Input
-```
+```plain
 6
 1
 2
@@ -33,7 +33,7 @@ tags:
 2333
 ```
 ### Sample Output
-```
+```plain
 1 1
 2 0
 22 -2
