--- a/_posts/2018-09-01-[BZOJ4916]神犇和蒟蒻.md
+++ b/_posts/2018-09-01-[BZOJ4916]神犇和蒟蒻.md
@@ -24,11 +24,11 @@ tags:
 ![](https://www.lydsy.com/JudgeOnline/upload/201705/11.png)
 
 ### Sample Input
-```
+```plain
 1
 ```
 ### Sample Output
-```
+```plain
 1
 1
 ```
