--- a/_posts/2018-09-02-[NOIP2017]列队.md
+++ b/_posts/2018-09-02-[NOIP2017]列队.md
@@ -46,14 +46,14 @@ Sylvia 所在的方阵中有$n \times m$名学生，方阵的行数为 $n$，列
 
 ### 输入输出样例
 #### 输入样例#1： 
-```
+```plain
 2 2 3 
 1 1 
 2 2 
 1 2 
 ```
 #### 输出样例#1： 
-```
+```plain
 1
 1
 4
