--- a/_posts/2018-09-03-[NOIP2015]运输计划.md
+++ b/_posts/2018-09-03-[NOIP2015]运输计划.md
@@ -41,7 +41,7 @@ L 国有 $n$ 个星球，还有 $n-1$ 条双向航道，每条航道建立在两
 
 ### 输入输出样例
 #### 输入样例#1： 
-```
+```plain
 6 3 
 1 2 3 
 1 6 4 
@@ -53,7 +53,7 @@ L 国有 $n$ 个星球，还有 $n-1$ 条双向航道，每条航道建立在两
 4 5
 ```
 #### 输出样例#1： 
-```
+```plain
 11
 ```
 ### 说明
