--- a/_posts/2018-09-03-[NOIP2016]愤怒的小鸟.md
+++ b/_posts/2018-09-03-[NOIP2016]愤怒的小鸟.md
@@ -56,7 +56,7 @@ tags:
 
 ### 输入输出样例
 #### 输入样例#1：
-``` 
+```plain
 2
 2 0
 1.00 3.00
@@ -69,12 +69,12 @@ tags:
 5.00 5.00
 ```
 #### 输出样例#1： 
-```
+```plain
 1
 1
 ```
 #### 输入样例#2： 
-```
+```plain
 3
 2 0
 1.41 2.00
@@ -91,13 +91,13 @@ tags:
 5.00 5.00
 ```
 #### 输出样例#2： 
-```
+```plain
 2
 2
 3
 ```
 #### 输入样例#3： 
-```
+```plain
 1
 10 0
 7.16 6.28
@@ -112,7 +112,7 @@ tags:
 8.15 4.99
 ```
 #### 输出样例#3： 
-```
+```plain
 6
 ```
 ### 说明
