--- a/_posts/2018-09-03-[NOIP2017]逛公园.md
+++ b/_posts/2018-09-03-[NOIP2017]逛公园.md
@@ -37,7 +37,7 @@ tags:
 
 ### 输入输出样例
 #### 输入样例#1： 
-```
+```plain
 2
 5 7 2 10
 1 2 1
@@ -52,7 +52,7 @@ tags:
 2 1 0
 ```
 #### 输出样例#1： 
-```
+```plain
 3
 -1
 ```
