--- a/_posts/2018-10-08-[HDU5215]Cycle.md
+++ b/_posts/2018-10-08-[HDU5215]Cycle.md
@@ -16,7 +16,7 @@ tags:
 给定一个无向图，问是否存在奇环/偶环
 
 ### Sample Input
-```
+```plain
 3
 1 0
 3 3
@@ -30,7 +30,7 @@ tags:
 4 1
 ```
 ### Sample Output
-```
+```plain
 NO
 NO
 YES
