--- a/_posts/2018-10-08-[Wannafly挑战赛21E]未来城市规划.md
+++ b/_posts/2018-10-08-[Wannafly挑战赛21E]未来城市规划.md
@@ -40,7 +40,7 @@ ASK p   (p是正整数，且p≤N)
 
 ### 示例1
 #### 输入
-```
+```plain
 5 5
 1 1
 2 5
@@ -53,7 +53,7 @@ INC 2 5 3
 ASK 1
 ```
 #### 输出
-```
+```plain
 14
 84
 ```
