--- a/_posts/2018-10-16-[BZOJ4300]绝世好题.md
+++ b/_posts/2018-10-16-[BZOJ4300]绝世好题.md
@@ -19,12 +19,12 @@ tags:
 输出文件共一行。
 包括一个整数，表示子序列bi的最长长度。
 ### Sample Input
-```
+```plain
 3
 1 2 3
 ```
 ### Sample Output
-```
+```plain
 2
 ```
 ### HINT
