--- a/_posts/2018-10-16-[LUOGU4198]楼房重建.md
+++ b/_posts/2018-10-16-[LUOGU4198]楼房重建.md
@@ -28,7 +28,7 @@ M行，第i行一个整数表示第i天过后小A能看到的楼房有多少栋
 
 ### 输入输出样例
 #### 输入样例#1： 
-```
+```plain
 3 4
 2 4
 3 6
@@ -36,7 +36,7 @@ M行，第i行一个整数表示第i天过后小A能看到的楼房有多少栋
 1 1
 ```
 #### 输出样例#1： 
-```
+```plain
 1
 1
 1
