--- a/_posts/2018-10-17-[SCOI2009]迷路.md
+++ b/_posts/2018-10-17-[SCOI2009]迷路.md
@@ -21,17 +21,17 @@ windy在有向图中迷路了。 该有向图有 N 个节点，windy从节点 0 
 
 ### 输入输出样例
 #### 输入样例#1： 
-```
+```plain
 2 2
 11
 00
 ```
 #### 输出样例#1： 
-```
+```plain
 1
 ```
 #### 输入样例#2： 
-```
+```plain
 5 30
 12045
 07105
@@ -40,7 +40,7 @@ windy在有向图中迷路了。 该有向图有 N 个节点，windy从节点 0 
 12345
 ```
 #### 输出样例#2： 
-```
+```plain
 852
 ```
 ### 说明
