--- a/_posts/2018-10-28-[NOI.AC43]ladder.md
+++ b/_posts/2018-10-28-[NOI.AC43]ladder.md
@@ -23,22 +23,24 @@ tags:
 一行一个整数,表示合法的方案数对10^9+9取模的结果。
 
 #### 【样例输入1】
-```
+```plain
 5 1
 ```
 #### 【样例输出1】
-```
+```plain
 4
 ```
 #### 【样例解释1】
 因为这个间隔的上限是1，并且每一层只能留一个横木所以一组合法的方案肯定是只有一个梯子保留了所有的横木，其他的梯子没有保留任何一根横木，其中梯子数是4，所以答案也就是4。
 
 #### 【样例输入2】
-```
+```plain
 4 3
 ```
 #### 【样例输出2】
+```plain
 256
+```
 #### 【样例解释2】
 我们会发现对于任意一种摆放方案，都是合法的，所有的摆放方案正是4^3。
 
