--- a/_posts/2018-10-30-[BZOJ5091][Lydsy1711月赛]摘苹果.md
+++ b/_posts/2018-10-30-[BZOJ5091][Lydsy1711月赛]摘苹果.md
@@ -27,7 +27,7 @@ tags:
  若答案为P/Q，则输出一行一个整数，即P*Q^{-1} mod 1000000007(10^9+7)。
 
 ### Sample Input
-```
+```plain
 3 4 2
 2 3 4
 1 2
@@ -35,8 +35,8 @@ tags:
 2 3
 3 1
 ```
-Sample Output
-```
+### Sample Output
+```plain
 750000011
 ```
 //期望为5.75=23/4=(23*250000002) mod 1000000007=750000011。
