--- a/_posts/2018-11-25-[SDOI2010]星际竞速.md
+++ b/_posts/2018-11-25-[SDOI2010]星际竞速.md
@@ -36,7 +36,7 @@ tags:
 
 ### 输入输出样例
 #### 输入样例#1： 
-```
+```plain
 3 3
 1 100 100
 2 1 10
@@ -44,11 +44,11 @@ tags:
 2 3 1
 ```
 #### 输出样例#1： 
-```
+```plain
 12
 ```
 #### 输入样例#2： 
-```
+```plain
 3 3
 1 2 3
 1 2 100
@@ -56,11 +56,11 @@ tags:
 2 3 100
 ```
 #### 输出样例#2： 
-```
+```plain
 6
 ```
 #### 输入样例#3： 
-```
+```plain
 4 5
 100 1000 10 100
 1 2 100
@@ -70,7 +70,7 @@ tags:
 2 4 20
 ```
 #### 输出样例#3： 
-```
+```plain
 230
 ```
 ### 说明
