--- a/_posts/2018-11-26-[CQOI2012]交换棋子.md
+++ b/_posts/2018-11-26-[CQOI2012]交换棋子.md
@@ -22,7 +22,7 @@ tags:
 
 ### 输入输出样例
 #### 输入样例#1： 
-```
+```plain
 3 3
 110
 000
@@ -35,7 +35,7 @@ tags:
 222
 ```
 #### 输出样例#1： 
-```
+```plain
 4
 ```
 ### 题解
