--- a/_posts/2018-11-27-[CQOI2017]老C的方块.md
+++ b/_posts/2018-11-27-[CQOI2017]老C的方块.md
@@ -33,7 +33,7 @@ tags:
 
 ### 输入输出样例
 #### 输入样例#1： 
-```
+```plain
 2 2 4
 1 1 5 
 1 2 6 
@@ -41,11 +41,11 @@ tags:
 2 2 8
 ```
 #### 输出样例#1： 
-```
+```plain
 5
 ```
 #### 输入样例#2： 
-```
+```plain
 3 3 7 
 1 1 10 
 1 2 15 
@@ -56,7 +56,7 @@ tags:
 3 1 10
 ```
 #### 输出样例#2： 
-```
+```plain
 15
 ```
 ### 说明
