--- a/_posts/2018-11-28-[SDOI2013]费用流.md
+++ b/_posts/2018-11-28-[SDOI2013]费用流.md
@@ -36,13 +36,13 @@ Alice和Bob在图论课程上学习了最大流和最小费用最大流的相关
 
 ### 输入输出样例
 #### 输入样例#1： 
-```
+```plain
 3 2 1
 1 2 10
 2 3 15
 ```
 #### 输出样例#1： 
-```
+```plain
 10
 10.0000
 ```
