--- a/_posts/2018-12-10-[CTSC2016]时空旅行.md
+++ b/_posts/2018-12-10-[CTSC2016]时空旅行.md
@@ -49,7 +49,7 @@ tags:
 输出 m 行，分别表示每次旅行完成调查的最小总花费。
 
 ### Sample Input
-```
+```plain
 4 4 2
 0 0 1 8 2 3 7
 0 1 2 10 1 6 2
@@ -61,7 +61,7 @@ tags:
 ```
 
 ### Sample Output
-```
+```plain
 18
 6
 11
