--- a/_posts/2019-01-03-[BZOJ1396]识别子串.md
+++ b/_posts/2019-01-03-[BZOJ1396]识别子串.md
@@ -18,11 +18,11 @@ tags:
 ### Output
 L行,每行一个整数,第i行的数据表示关于S的第i个元素的最短识别子串有多长.
 ### Sample Input
-```
+```plain
 agoodcookcooksgoodfood
 ```
 ### Sample Output
-```
+```plain
 1
 2
 3
