--- a/_posts/2019-01-06-[HEOI2015]最短不公共子串.md
+++ b/_posts/2019-01-06-[HEOI2015]最短不公共子串.md
@@ -35,24 +35,24 @@ tags:
 
 ### 输入输出样例
 #### 输入样例#1： 
-```
+```plain
 aabbcc
 abcabc
 ```
 #### 输出样例#1： 
-```
+```plain
 2
 4
 2
 4
 ```
 #### 输入样例#2： 
-```
+```plain
 aabbcc
 aabbcc
 ```
 #### 输出样例#2：
-```
+```plain
 -1
 -1
 2
