--- a/_posts/2018-07-19-[ZJOI2008]杀蚂蚁.md
+++ b/_posts/2018-07-19-[ZJOI2008]杀蚂蚁.md
@@ -104,14 +104,14 @@ tags:
 
 ### 输入输出样例
 #### 输入样例#1： 
-```
+```plain
 3 5
 1 1 2
 2 2
 5
 ```
 #### 输出样例#1： 
-```
+```plain
 The game is going on
 5
 5 1 3 1 4
