--- a/_posts/2018-08-28-[HDU1695]GCD.md
+++ b/_posts/2018-08-28-[HDU1695]GCD.md
@@ -20,13 +20,13 @@ tags:
 对于每个样例，输出其对应的答案。 
 
 ### Sample Input
-```
+```plain
 2
 1 3 1 5 1
 1 11014 1 14409 9
 ```
 ### Sample Output
-```
+```plain
 Case 1: 9
 Case 2: 736427
 ```
