--- a/_posts/2018-09-03-[NOIP2016]换教室.md
+++ b/_posts/2018-09-03-[NOIP2016]换教室.md
@@ -53,7 +53,7 @@ tags:
 
 ### 输入输出样例
 #### 输入样例#1：
-```
+```plain
 2 1 2
 1 2 1
 0.8 0.2 0.5 
@@ -62,7 +62,7 @@ tags:
 2 3 1
 ```
 #### 输出样例#1：
-```
+```plain
 2.80
 ```
 ### 说明
