--- a/_posts/2018-09-03-[NOIP2017]宝藏.md
+++ b/_posts/2018-09-03-[NOIP2017]宝藏.md
@@ -39,7 +39,7 @@ L代表这条道路的长度，K代表从赞助商帮你打通的宝藏屋到这
 
 ### 输入输出样例
 #### 输入样例#1： 
-```
+```plain
 4 5 
 1 2 1 
 1 3 3 
@@ -48,11 +48,11 @@ L代表这条道路的长度，K代表从赞助商帮你打通的宝藏屋到这
 3 4 1 
 ``` 
 #### 输出样例#1： 
-```
+```plain
 4
 ```
 #### 输入样例#2： 
-```
+```plain
 4 5 
 1 2 1 
 1 3 3 
@@ -61,7 +61,7 @@ L代表这条道路的长度，K代表从赞助商帮你打通的宝藏屋到这
 3 4 2  
 ```
 #### 输出样例#2： 
-```
+```plain
 5
 ```
 ### 说明
