--- a/_posts/2018-10-17-[ZROI367]陈太阳与路径.md
+++ b/_posts/2018-10-17-[ZROI367]陈太阳与路径.md
@@ -25,7 +25,7 @@ tags:
 
 ### 样例1
 #### input
-```
+```plain
 6
 1 2
 1 3
@@ -34,7 +34,7 @@ tags:
 5 6
 ```
 #### output
-```
+```plain
 2 1 5 1 2 1
 ```
 ### 数据规模与约定
