--- a/_posts/2018-10-27- [POI2018]Powódź.md
+++ b/_posts/2018-10-27- [POI2018]Powódź.md
@@ -25,7 +25,7 @@ tags:
 输出一行一个整数，即方案数模10^9+7的结果。
 
 ### Sample Input
-```
+```plain
 3 2 2
 1
 1
@@ -35,7 +35,7 @@ tags:
 ```
 
 ### Sample Output
-```
+```plain
 65
 ```
 
