--- a/_posts/2018-12-03-[HAOI2012]高速公路.md
+++ b/_posts/2018-12-03-[HAOI2012]高速公路.md
@@ -37,7 +37,7 @@ Q l r 表示对于给定的l,r，要求回答小A的问题
 
 ### 输入输出样例
 #### 输入样例#1： 
-```
+```plain
 4 5
 C 1 4 2
 C 1 2 -1
@@ -46,7 +46,7 @@ Q 2 4
 Q 1 4
 ```
 #### 输出样例#1： 
-```
+```plain
 1/1
 8/3
 17/6
