--- a/_posts/2018-12-04-[LUOGU3401]洛谷树.md
+++ b/_posts/2018-12-04-[LUOGU3401]洛谷树.md
@@ -40,7 +40,7 @@ tags:
 
 ### 输入输出样例
 #### 输入样例#1： 
-```
+```plain
 5 3
 1 2 3
 2 3 3
@@ -51,7 +51,7 @@ tags:
 1 3 5
 ```
 #### 输出样例#1： 
-```
+```plain
 14
 26
 ```
