--- a/_posts/2018-12-05-[HNOI2016]网络.md
+++ b/_posts/2018-12-05-[HNOI2016]网络.md
@@ -45,7 +45,7 @@ tags:
 
 ### 输入输出样例
 #### 输入样例#1： 
-```
+```plain
 13 23
 1 2
 1 3
@@ -84,7 +84,7 @@ tags:
 2 3
 ```
 #### 输出样例#1： 
-```
+```plain
 -1 
 3 
 5 
