--- a/_posts/2018-12-05-[TJOI2015]旅游.md
+++ b/_posts/2018-12-05-[TJOI2015]旅游.md
@@ -27,7 +27,7 @@ tags:
 
 ### 输入输出样例
 #### 输入样例#1： 
-```
+```plain
 3
 1 2 3
 1 2
@@ -37,7 +37,7 @@ tags:
 1 3 100
 ```
 #### 输出样例#1： 
-```
+```plain
 1
 1
 ```
