--- a/_posts/2018-12-09-[BZOJ4311]向量.md
+++ b/_posts/2018-12-09-[BZOJ4311]向量.md
@@ -25,7 +25,7 @@ tags:
 对于每条t=3的询问，输出一个答案
 
 ### Sample Input
-```
+```plain
 5
 1 3 3
 1 1 4
@@ -35,7 +35,7 @@ tags:
 ```
 
 ### Sample Output
-```
+```plain
 18
 15
 ```
