--- a/_posts/2018-12-30-[HEOI2016]字符串.md
+++ b/_posts/2018-12-30-[HEOI2016]字符串.md
@@ -25,7 +25,7 @@ tags:
 
 ### 输入输出样例
 #### 输入样例#1： 
-```
+```plain
 5 5
 aaaaa
 1 1 1 5
@@ -35,7 +35,7 @@ aaaaa
 2 3 2 4
 ```
 #### 输出样例#1： 
-```
+```plain
 1
 1
 2
