--- a/_posts/9999-12-31-日记+机房趣事.md
+++ b/_posts/9999-12-31-日记+机房趣事.md
@@ -562,6 +562,8 @@ $Cansult$~~突然发神经~~：
 
 $loli​$从旁边笃笃笃地走了过去
 
-$Cansult$：改革春风吹满地~吹满地~地~
+$Cansult​$：改革春风吹满地~吹满地~地~
+
+$loli$管着我们这一群祸害真是挺心疼ta的……
 
 [$Cansult$的日记 比我的有意思多了](https://cansult.ga/3632.html)
