--- a/_posts/9999-12-31-日记+机房趣事.md
+++ b/_posts/9999-12-31-日记+机房趣事.md
@@ -566,4 +566,12 @@ $Cansult​$：改革春风吹满地~吹满地~地~
 
 $loli$管着我们这一群祸害真是挺心疼ta的……
 
+------
+
+$Cansult$：哎你看这个笔记本$X1\;Carbon$非常$dio$，ta这个外壳使用**活性炭**做的
+
+我：woc好$dio$Σ( ° △ °|||)︴
+
+$Cansult$（几秒后）：诶不对是碳纤维……
+
 [$Cansult$的日记 比我的有意思多了](https://cansult.ga/3632.html)
