--- a/_posts/2018-12-13-[BZOJ3809]Gty的二逼妹子序列.md
+++ b/_posts/2018-12-13-[BZOJ3809]Gty的二逼妹子序列.md
@@ -109,14 +109,8 @@ int ask(int l,int r)
 	  if(num[i]) ++ans;
 	return ans;
 }
-void add(int x)
-{
-	if(++num[a[x]]==1) ++cnt[pos[a[x]]];
-}
-void del(int x)
-{
-	if(!--num[a[x]]) --cnt[pos[a[x]]];
-}
+void add(int x) {if(++num[a[x]]==1) ++cnt[pos[a[x]]];}
+void del(int x) {if(!--num[a[x]]) --cnt[pos[a[x]]];}
 int main()
 {
 	k=sqrt(n=read()),m=read();
