--- a/_posts/2019-01-15-「雅礼集训 2017 Day1」字符串.md
+++ b/_posts/2019-01-15-「雅礼集训 2017 Day1」字符串.md
@@ -3,7 +3,7 @@ layout:		post
 title:		"「雅礼集训 2017 Day1」字符串"
 date:		2019-01-15
 author:		Dispwnl
-header-img:
+header-img:	"img/used/38533.jpg"
 catalog:	false
 tags:
     - 后缀自动机
@@ -76,7 +76,7 @@ eeb 1 3
 
 发现$\sum w_i=k\times q\le 10^5$，所以分$k$的大小讨论
 
-如果$k$比较小，小到可以支持$O(k^2)$的复杂度，那么可以维护$w$上的区间$[a,b]$在询问$[l,r]$中出现的次数$t$，这样就可以枚举$w$的每一段子串，匹配到状态$A$的时候，这段子串答案就是$t\times right_A$，求和即可，复杂度$O(n(\sqrt n +k^2))$
+如果$k​$比较小，小到可以支持$O(k^2)​$的复杂度，那么可以维护$w​$上的区间$[a,b]​$在询问$[l,r]​$中出现的次数$t​$，这样就可以枚举$w​$的每一段子串，匹配到状态$A​$的时候，这段子串答案就是$t\times right_A​$，求和即可，复杂度$O(n(\sqrt n +k^2))​$
 
 如果$k$比较大，说明$q$比较小，匹配字符串的时候如果这个位置是某个询问的右端点，所以ta的祖先中最小的大于等于询问区间长度的$len$对应的状态的$right$集合大小就是这个询问的答案，这个可以倍增处理，复杂度$O(q\times (logk+k)$
 
