--- a/_posts/2019-01-16-[HNOI2014]世界树.md
+++ b/_posts/2019-01-16-[HNOI2014]世界树.md
@@ -81,8 +81,149 @@ N<=300000, q<=300000,m[1]+m[2]+...+m[q]<=300000
 
 因为每个点可能会受ta的兄弟的管辖，所以先要处理儿子对父亲的影响，再处理父亲对儿子的影响
 
-如果一个点$x$的子树里没有虚树点，说明ta的子树里都受$ct_x$管辖，所以答案$+siz_x$
+如果一个点$x$的某个子树里没有虚树点，说明ta的子树里都受$ct_x$管辖，所以答案$+siz_{son_x}$
 
-如果一个点$x$的子树里有虚树点$y$，即虚树上$x,y$之间有连边，分类讨论
+如果一个点$x$的子树里有虚树点$y$，即虚树上$x,y​$之间有连边，分类讨论
 
-- 如果ct
+- 如果$ct_x=ct_y$，说明这条虚树边上的点（不包括$x,y$）的子树都受$ct_x$管辖，所以答案$+(siz_{son_x}-siz_y)$
+- 如果$ct_x \not= ct_y$，说明这条虚树边上的点被分成了两部分，分别受$ct_x,ct_y$管辖，这时只需要用倍增找到这个分界点$t$即可，$ct_x$答案$+(siz_{son_x}-siz_t)$，$ct_y$答案$+(siz_t-siz_y)$
+
+### 代码
+
+```c++
+# include<iostream>
+# include<cstring>
+# include<cstdio>
+# include<algorithm>
+using namespace std;
+const int MAX=3e5+5;
+struct p{
+	int x,y;
+}c[MAX<<1];
+int n,m,num,Top,cnt;
+int h[MAX],ans[MAX],ct[MAX],st[MAX],_T[MAX],T[MAX],top[MAX],id[MAX],_siz[MAX],siz[MAX],son[MAX],d[MAX];
+int f[23][MAX];
+bool cmp(int a,int b) {return id[a]<id[b];}
+int read()
+{
+	int x(0);
+	char ch=getchar();
+	for(;!isdigit(ch);ch=getchar());
+	for(;isdigit(ch);x=x*10+ch-48,ch=getchar());
+	return x;
+}
+void add(int x,int y)
+{
+	c[++num]=(p){h[x],y},h[x]=num;
+	c[++num]=(p){h[y],x},h[y]=num;
+}
+void dfs(int x=1,int fa=0)
+{
+	f[0][x]=fa,d[x]=d[fa]+(siz[x]=1);
+	for(int i=h[x];i;i=c[i].x)
+	  if(c[i].y^fa)
+	  {
+	  	dfs(c[i].y,x),siz[x]+=siz[c[i].y];
+	  	if(siz[c[i].y]>siz[son[x]]) son[x]=c[i].y;
+	  }
+}
+void dfs1(int x=1,int tp=1)
+{
+	top[x]=tp,id[x]=++cnt;
+	if(!son[x]) return void(h[x]=0);
+	dfs1(son[x],tp);
+	for(int i=h[x];i;i=c[i].x)
+	  if((son[x]^c[i].y)&&(f[0][x]^c[i].y)) dfs1(c[i].y,c[i].y);
+	h[x]=0;
+}
+int LCA(int x,int y)
+{
+	while(top[x]^top[y])
+	{
+		if(d[top[x]]<d[top[y]]) swap(x,y);
+		x=f[0][top[x]];
+	}
+	return d[x]>d[y]?y:x;
+}
+void Init()
+{
+	for(int i=1;i<=22;++i)
+	  for(int j=1;j<=n;++j)
+	    f[i][j]=f[i-1][f[i-1][j]];
+}
+int GET_DIS(int x,int y) {return d[x]+d[y]-(d[LCA(x,y)]<<1);}
+int GET_SON(int x,int y)
+{
+	for(int i=22;i>=0;--i)
+	  if(d[f[i][x]]>d[y]) x=f[i][x];
+	return x;
+}
+void dfs_(int x=1,int fa=0)
+{
+	ans[x]=0,_siz[x]=siz[x];
+	for(int i=h[x],_d,__d;i;i=c[i].x)
+	  if(c[i].y^fa)
+	  {
+	  	dfs_(c[i].y,x),_d=d[ct[c[i].y]]-d[x],__d=ct[x]?d[ct[x]]-d[x]:1e9;
+	  	if(_d<__d||(_d==__d&&ct[x]>ct[c[i].y])) ct[x]=ct[c[i].y];
+	  }
+}
+void dfs__(int x=1,int fa=0)
+{
+	for(int i=h[x],_d,__d;i;i=c[i].x)
+	  if(c[i].y^fa)
+	  {
+	  	_d=GET_DIS(ct[x],c[i].y),__d=GET_DIS(c[i].y,ct[c[i].y]);
+	  	if(_d<__d||(_d==__d&&ct[x]<ct[c[i].y])) ct[c[i].y]=ct[x];
+	  	dfs__(c[i].y,x);
+	  }
+}
+void dfs___(int x=1,int fa=0)
+{
+	for(int i=h[x],son,qwq;i;i=c[i].x)
+	  if(c[i].y^fa)
+	  {
+	  	dfs___(c[i].y,x),son=GET_SON(c[i].y,x),_siz[x]-=siz[son];
+	  	if(ct[c[i].y]==ct[x]) ans[ct[x]]+=siz[son]-siz[c[i].y];
+	  	else
+	  	{
+	  		qwq=c[i].y;
+	  		for(int j=22,_d,__d;j>=0;--j)if(f[j][qwq]){_d=GET_DIS(f[j][qwq],ct[x]),__d=GET_DIS(f[j][qwq],ct[c[i].y]);if(_d>__d||(_d==__d&&ct[c[i].y]<ct[x])) qwq=f[j][qwq];}
+	  		ans[ct[c[i].y]]+=siz[qwq]-siz[c[i].y],ans[ct[x]]+=siz[son]-siz[qwq];
+		}
+	  }
+	h[x]=0,ans[ct[x]]+=_siz[x];
+}
+void Work(int k)
+{
+	num=0,st[Top=1]=1;
+	for(int i=1,lca;i<=k;++i)
+	  {
+	  	lca=LCA(T[i],st[Top]);
+	  	while(Top>1&&d[st[Top-1]]>d[lca]) add(st[Top],st[Top-1]),--Top;
+	  	while(Top&&d[lca]<d[st[Top]]) add(st[Top],lca),--Top;
+	  	if(!Top||d[st[Top]]<d[lca]) st[++Top]=lca;
+	  	if(st[Top]!=T[i]) st[++Top]=T[i];
+	  }
+	while(Top>1) add(st[Top],st[Top-1]),--Top;
+	dfs_(),dfs__(),dfs___();
+	for(int i=1;i<=k;++i)
+	  printf("%d ",ans[_T[i]]);
+	printf("\n");
+}
+int main()
+{
+	n=read();
+	for(int i=1,x;i<n;++i)
+	  x=read(),add(x,read());
+	dfs(),dfs1(),Init(),m=read();
+	for(int i=1,k;i<=m;++i)
+	  {
+	  	k=read(),memset(ct,0,sizeof(ct));
+	  	for(int j=1;j<=k;++j)
+	  	  T[j]=read(),ct[T[j]]=T[j];
+		memcpy(_T,T,sizeof(T)),sort(T+1,T+1+k,cmp),Work(k);
+	  }
+	return 0;
+}
+```
