--- a/_posts/2019-01-09-[NOI2018]你的名字.md
+++ b/_posts/2019-01-09-[NOI2018]你的名字.md
@@ -46,9 +46,9 @@ sgepe 1 9
 ```
 ### 说明
 
-| 测试点 | $\vert S\vert \leq$ | $\vert Q \vert \leq$ | $\sum |T|\leq$ | 其他限制 |
+| 测试点 | $\vert S\vert \leq$ | $\vert Q \vert \leq$ | $\sum \vert T\vert \leq$ | 其他限制 |
 | :----------: | :----------: | :----------: | :----------: | :----------: |
-|1|	$200$|	$200$|	$40000$|	$\vert T\vert \leq 200$|
+|1|	$200$| $200$ |	$40000$|	$\vert T\vert \leq 200$|
 |2|	$1000$|	$200$|	$40000$|	$\vert T\vert \leq 200$|
 |3|	$1000$|	$200$|	$40000$|	$\vert T\vert \leq 200$|
 |4|	$1000$|	$200$|	$5 \times 10^5$ |无|
