--- a/_posts/2019-01-09-[NOI2018]你的名字.md
+++ b/_posts/2019-01-09-[NOI2018]你的名字.md
@@ -79,7 +79,7 @@ sgepe 1 9
 对于所有数据，保证 $1\leq l \leq r \leq \vert S\vert,1\leq \vert T\vert \leq 5 \times 10^5$
 
 ### 题解
-因为$l=1,r=\vert S\vert$有$68$分所以先考虑这个怎么做
+因为$l=1,r=\vert S\vert$有$68$分，所以先考虑这个怎么做
 
 设$Lmax_i$表示$i$往前最多能在$S$里匹配的长度，显然的是$SAM$里一个状态的$Lmax_i$都是相等的
 
