--- a/_posts/2019-01-15-「雅礼集训 2017 Day1」字符串.md
+++ b/_posts/2019-01-15-「雅礼集训 2017 Day1」字符串.md
@@ -2,7 +2,7 @@
 layout:		post
 title:		"「雅礼集训 2017 Day1」字符串"
 date:		2019-01-15
-author:		Dispwnl
+author:		"Dispwnl"
 header-img:	"img/used/38533.jpg"
 catalog:	false
 tags:
