--- a/_posts/2019-01-17-[BZOJ3730]震波.md
+++ b/_posts/2019-01-17-[BZOJ3730]震波.md
@@ -65,19 +65,23 @@ tags:
 
 ### 题解
 
-先构建出来点分树，对于点分树上的每一个节点开两棵线段树，以距离为下标存价值和，维护子树中的点到自己的答案$ans$和到父亲的答案$ans'$
+先构建出来点分树，对于点分树上的每一个节点开两棵线段树，以距离为下标存价值和，维护子树中的点每个距离的到自己的答案$ans$和到父亲的答案$ans'$
 
-修改一路暴跳$father$就可以，查询统计$\sum_{x!=root}ans_{fa_x}-ans'_x$
+修改一路暴跳$father​$就可以，查询统计$\sum_{x!=root}ans_{fa_x}-ans'_x​$
 
 然而这题要卡常……
 
 - 手写<code>max</code>函数
-- 树剖求$LCA$
+- 树剖求$LCA​$
 - 修改时发现修改位置和值是一样的，所以可以同时修改自己的$ans'$和父亲的$ans$
 - 查询同理
 - ……
 
 当你在本地跑进$1s$的时候$BZOJ$就~~可能~~能过了
+
+写代码$10$分钟卡常卡了$1$个多小时……
+
+![](/img/qaq/哭.jpg)
 
 ### 代码
 
